<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">Lista de compras</string>
    <string name="form_item_fragment_label">Adicionar item</string>


    <string name="hint_price">Digite o valor do item</string>
    <string name="hint_title">Digite o nome do item</string>
    <string name="save">Salvar</string>
    <string name="hint_quantity">Digite a quantidade</string>
    <string name="cancel">Cancelar</string>
    <string name="header_item">Item</string>
    <string name="header_quantity">Qtd</string>
    <string name="header_price">Valor</string>
    <string name="price">R$ %.2f</string>
    <string name="total_price">R$ %.2f\n(R$ %.2f)</string>
    <string name="alert_msg_item_saved">Deseja cadastrar mais um item OU voltar para a lista?</string>
    <string name="alert_title_item_saved">Item salvo!</string>
    <string name="alert_positive_button_item_saved">Mais um</string>
    <string name="alert_negative_button_item_saved">Voltar</string>
    <string name="update">Atualizar</string>
    <string name="text_view_total_price">Total: R$ %.2f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_payment_method">Forma de pagamento</string>
    <string name="hint_payment_limit">Limite</string>
    <string name="button_register">cadastrar</string>
    <string name="button_cancel">cancelar</string>
    <string name="money_fragment_label">Gerenciar recursos</string>

    <string name="button_new">novo</string>
    <string name="fab_content_description">Adicionar nova forma de pagamento</string>

</resources>