<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListFragment">
    <fragment
        android:id="@+id/MoneyFragment"
        android:name="com.lftf.shoppinglist.view.MoneyFragment"
        android:label="@string/money_fragment_label"
        tools:layout="@layout/fragment_money"/>

    <fragment
        android:id="@+id/FormItemFragment"
        android:name="com.lftf.shoppinglist.view.FormItemFragment"
        android:label="@string/form_item_fragment_label"
        tools:layout="@layout/fragment_form_item">

        <argument
            android:name="isNew"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="com.lftf.shoppinglist.view.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_ListFragment_to_MoneyFragment"
            app:destination="@id/MoneyFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
        <action
            android:id="@+id/action_ListFragment_to_FormItemFragment"
            app:destination="@id/FormItemFragment"
            app:popUpTo="@drawable/ic_arrow_down" />
    </fragment>
</navigation>