<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context=".view.FormItemFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/text_layout_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_title"
            style="@style/TextInputFormItem"
            android:drawableLeft="@drawable/ic_shopping_cart"
            android:hint="@string/hint_title"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/text_layout_quantity"
        app:layout_constraintEnd_toEndOf="@id/text_layout_title"
        app:layout_constraintStart_toStartOf="@id/text_layout_title"
        app:layout_constraintTop_toBottomOf="@id/text_layout_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_price"
            style="@style/TextInputFormItem"
            android:drawableLeft="@drawable/ic_money"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/text_layout_title"
        app:layout_constraintStart_toStartOf="@id/text_layout_title"
        app:layout_constraintTop_toBottomOf="@id/text_layout_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_quantity"
            style="@style/TextInputFormItem"
            android:drawableLeft="@drawable/ic_123"
            android:hint="@string/hint_quantity"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="@id/text_layout_quantity"
        app:layout_constraintStart_toStartOf="@id/text_layout_quantity"
        app:layout_constraintTop_toBottomOf="@id/text_layout_quantity"
        tools:text="@string/text_view_total_price" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_total_price" />

</androidx.constraintlayout.widget.ConstraintLayout>