<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="2"
            android:background="@drawable/rectangle"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:padding="4dp"
            android:text="@string/header_item"
            android:textColor="@color/white" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/rectangle"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:padding="4dp"
            android:text="@string/header_quantity"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rectangle"
            android:backgroundTint="?attr/colorPrimaryVariant">

            <TextView
                android:id="@+id/header_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:padding="4dp"
                android:text="@string/header_price"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/sort_img"
                android:background="@color/translucid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_down"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>